# tap_leadbyte

./: .gitignore  README.md  config.sample.json  log  pyproject.toml
tap_leadbyte/: __init__.py  client.py  streams.py  tap.py
